# SIGESM

./: .env  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: quality.yml
docs/: API_GUIDELINES.md  ARCHITECTURE.md  BUSINESS_RULES.md  CHANGELOG.md  CODING_GUIDELINES.md  DATABASE_MODEL.md  DATA_ARCHITECTURE.md  DECISIONS.md  DEPLOYMENT_GUIDELINES.md  DOMAIN_MODEL.md  EVENT_CATALOG.md  EVENT_STORMING.md  IMPLEMENTATION_REPORT.md  NAMING_CONVENTIONS.md  PRODUCT_BACKLOG.md  ROADMAP.md  RULE_ENGINE.md  SECURITY_GUIDELINES.md  TESTING_GUIDELINES.md  UI_GUIDELINES.md  USER_MANAGEMENT.md  USE_CASES.md
docs/acceptance/: AC-001.md  AC-002.md  AC-003.md  AC-004.md  AC-005.md  AC-006.md
docs/adr/: ADR-0001-clean-architecture.md  ADR-0002-bounded-contexts-ddd.md  ADR-0003-quality-gates.md  ADR-0004-shared-rest-counter-service-priority.md
docs/diagrams/: CONTEXT.md  Context.md  DATABASE.md  DATABASE_ER.md  DOMAIN.md  Database.md  Domain.md  EVENT_FLOW.md  INFRASTRUCTURE.md  Infrastructure.md  LAYERS.md  Layers.md  MODULES.md  Modules.md
docs/reviews/: AR-001.md  AR-002.md  AR-003.md  AR-004.md  AR-005.md  AR-006.md
docs/specifications/: STS-001A.md  STS-001B.md  STS-001C.md  STS-001D.md  STS-001E.md  STS-001F.md
migrations/: env.py
scripts/: build.ps1  build.sh
src/: main.py
tests/: test_bootstrap_startup.py  test_core_config_package.py  test_core_database_package.py  test_health_check.py  test_settings.py  test_shared_kernel_package.py
(+533 files in other folders)
